# opencan

./: .gitignore  Cargo.toml  deny.toml  rustfmt.toml  test-import.yml
.github/workflows/: combine-dependabot.yml  rust.yml
analyze/: Cargo.toml
analyze/src/: lib.rs
can/: Cargo.toml
can/src/: cantools.rs  display.rs  error.rs  lib.rs  message.rs  network.rs  signal.rs  translation.rs  value.rs
can/tests/: message_construction_tests.rs  message_lookup_tests.rs  signal_construction_tests.rs
cancompose/: Cargo.toml
cancompose/gadgets/: igvc_can.yml  test-brake.yml
cancompose/src/: lib.rs  main.rs  translation.rs  ymlfmt.rs
candecode/: Cargo.toml
candecode/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
codegen/: Cargo.toml
codegen/src/: c_rx.rs  c_tx.rs  lib.rs  message.rs  message_ok.rs  node_ok.rs  rx.rs  signal.rs  tx.rs
codegen/tests/: cantools_duel.rs  test-util.rs  test_callback_stubs.c  testutil-decoders.rs
codegen/testutil/: Cargo.toml  requirements.txt
codegen/testutil/src/: decoders.rs  lib.rs  test_callback_stubs.c  util.rs
compose/: Cargo.toml
compose/gadgets/: can.yml  igvc_can.yml  multi-node.yml  templates.yml  test-brake.yml
compose/src/: lib.rs  main.rs  translation.rs  ymlfmt.rs
core/: Cargo.toml
core/src/: cantools.rs  display.rs  error.rs  interchange.rs  lib.rs  message.rs  network.rs  node.rs  signal.rs  template.rs  translation.rs
core/src/translation/: cantools.rs  from_dbc.rs  mod.rs
cpp/: SConscript  SConstruct
cpp/src/: main.cc  signal.cc  signal.h  value.cc  value.h
docs/: mkdocs.yml
docs/docs/: index.md
driver/: Cargo.toml
driver/src/: main.rs
gui/: Cargo.toml
gui/src/: decode.rs  interface_picker.rs  main.rs  motorsports.rs  perf_panel.rs  rx_area.rs  status_bar.rs
opencan-cli/: Cargo.toml
opencan-cli/src/: main.rs
src/: can.rs  main.rs
src/can/: can_print.rs
