[package]
name = "opencan-analyze"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo", "derive" ] }

opencan-core = { path = "../core" }
