[package]
name = "can"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "1.0"
textwrap = "0.16"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typed-builder = "0.11.0"
derive_builder = { version = "0.11.2", features = ["clippy"] }

[lib]
path = "src/lib.rs"
