[package]
name = "can"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = { version = "0.6.2", features = ["serde"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
indoc = "1.0.8"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
textwrap = "0.16.0"
thiserror = "1.0.38"

[lib]
path = "src/lib.rs"
