[package]
name = "cancompose"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
can = { path = "../can" }
clap = { version = "4.0", features = ["derive"] }
indoc = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-tuple-vec-map = "1.0.1"
serde_json = "1.0"
serde_yaml = "0.9"
