[package]
name = "opencan-codegen"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.7", features = ["cargo", "derive" ] }
git-version = "0.3.5"
indoc = "2.0.0"
textwrap = { version = "0.16.0", default-features = false }

opencan-core = { path = "../core" }

[dev-dependencies]
indoc = "2.0.0"
libloading = "0.7.4"
pyo3 = { version = "0.18.1", features = ["auto-initialize"] }
semver = "1.0.16"

opencan-compose = { path = "../compose" }

testutil = { path = "./testutil" }
