[package]
name = "opencan-codegen"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["cargo", "derive" ] }
git-version = "0.3.5"
indoc = "1.0.9"
textwrap = { version = "0.16.0", default-features = false }

opencan-core = { path = "../core" }

[dev-dependencies]
indoc = "1.0.9"
libloading = "0.7.4"
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
semver = "1.0.17"

opencan-compose = { path = "../compose" }

testutil = { path = "./testutil" }
