[package]
name = "opencan-codegen"
version = "0.1.1"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["cargo", "derive" ] }
git-version = "0.3.5"
indoc = "2.0.1"
textwrap = { version = "0.16.0", default-features = false }

opencan-core = { path = "../core" }

[dev-dependencies]
indoc = "2.0.1"
libloading = "0.8.0"
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
semver = "1.0.17"

opencan-compose = { path = "../compose" }

testutil = { path = "./testutil" }
