[package]
name = "opencan-compose"
version = "0.1.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.11", features = ["derive"] }
indoc = "2.0.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"

opencan-core = { path = "../core" }
