[package]
name = "opencan-compose"
version = "0.1.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
indoc = "2.0.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"

opencan-core = { path = "../core" }
