[package]
name = "opencan-compose"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
indoc = "1.0.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"

opencan-core = { path = "../core" }
