[package]
name = "opencan-core"
version = "0.1.1"
license = "MPL-2.0"
edition = "2021"

[dependencies]
bimap = { version = "0.6.3", features = ["serde"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
indoc = "2.0.1"
serde = { version = "1.0.160", features = ["derive"] }
textwrap = { version = "0.16.0", default-features = false }
thiserror = "1.0.40"

[lib]
path = "src/lib.rs"
