[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
eframe = { version = "0.21.1", features = [
    "__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
] }
socketcan = "1.7.0"
tracing-subscriber = "0.3"
egui_extras = "0.21.0"

pycanrs = { path = "../../pycanrs"}
