[package]
name = "opencan-juice"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bitvec = "1.0.1"
ctrlc = "3.2.5"
eframe = { version = "0.21.3", features = [
    "__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
] }
egui_extras = "0.21.0"
pycanrs = "0.1.0"
tracing-subscriber = "0.3"

opencan-compose = { path = "../compose" }
opencan-core = { path = "../core" }
clap = { version = "4.2.5", features = ["derive"] }
