[package]
name = "testutil"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
libloading = "0.7.4"
pyo3 = { version = "0.17.3", features = ["auto-initialize"] }
tempfile = "3.3.0"

opencan-codegen = { path = "../" }
opencan-core = { path = "../../core" }
