[package]
name = "testutil"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
float-cmp = "0.9.0"
libloading = "0.8.0"
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
tempfile = "3.5.0"

opencan-codegen = { path = "../" }
opencan-core = { path = "../../core" }
